# routes/api.php
@@ -34,9 +34,9 @@ Route::prefix('v1')->namespace('Api\V1')->group(function () {
     Route::get('products_by_brand/{id}', [\App\Http\Controllers\Api\V1\ProductsApiController::class, 'productsByBrand']);
 
     Route::get('product_details/{product}', [\App\Http\Controllers\Api\V1\ProductsApiController::class, 'productDetail']);
-
 });
 
 Route::prefix('v1')->namespace('Api\V1')->middleware('auth:sanctum')->group(function () {
     Route::post('register', [\App\Http\Controllers\Api\V1\UserApiController::class, 'register']);
+    Route::post('save_product_comment', [\App\Http\Controllers\Api\V1\ProductsApiController::class, 'saveComment']);
 });
